# dynamic_mcp

./: README.md
dynamic_mcp/: pyproject.toml
dynamic_mcp/dynamic_mcp/: __init__.py  app.py  auth.py  decorators.py  models.py  registry.py  server.py
examples/: basic_server.py  client_agent.py
