[project]
name = "dynamic-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-jose[cryptography]>=3.3",
  "passlib>=1.7",
  "pydantic>=2.6",
  "python-multipart>=0.0.21"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"